# nasa_evil_bot

./: Cargo.toml  alter.json  config.json
src/: file.rs  lib.rs  main.rs  slack.rs  utils.rs
