[package]
name = "slack_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"]}
compact_str = "0.9.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
